# awscredx

./: .travis-release.sh  .travis.yml  Cargo.toml  README.md
.github/workflows/: build-release.yml  run-tests.yml
doc/: accounts.drawio
scripts/: github-release-workflow.sy
scripts/lib/: build-job.sy  config.sy  create-release-job.sy
src/: assume.rs  config.rs  credentials.rs  init.rs  main.rs  state.rs  styles.rs  util.rs  version.rs  web_console.rs
src/assume/: assumer.rs  main_credentials.rs  mod.rs
src/init/: config-template.toml  context.rs  init.rs  initializer.rs  mod.rs  script.fish  script.sh  setup.rs  styles.rs
src/init/templates/: bootstrap.jinja2  config.toml  init.fish  init.sh  script.fish  script.sh
