[package]
name = "awscredx"
version = "0.5.2"
authors = ["Alexei Samokvalov <alexei@sam701.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
rusoto_core = "0.40"
rusoto_credential = "0.40"
rusoto_sts = "0.40"
toml = "0.5"
serde = { version = "1.0", features = ["derive", "rc"] }
custom_error = "1.7"
chrono = "0.4"
ansi_term = "0.12"
linked-hash-map = { version = "0.5", features = ["serde_impl"] }
reqwest = "0.9"
