[package]
name = "awscredx"
version = "0.10.0"
authors = ["Alexei Samokvalov <alexei@sam701.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
tokio = "*"
rusoto_core = "0.47"
rusoto_credential = "0.47"
rusoto_sts = "0.47"
rusoto_iam = "0.47"
toml = "0.5"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_urlencoded = "*"
serde_json = "*"
chrono = "0.4"
ansi_term = "0.12"
linked-hash-map = { version = "0.5.4", features = ["serde_impl"] }
reqwest = { version = "0.11", features = [ "default-tls", "blocking", "json" ] }
hyper = "*"
hyper-tls = "*"
hyper-proxy = "0.9"
webbrowser = "0.5"